--- a/src/index.html
+++ b/src/index.html
@@ -16,6 +16,7 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
+    <link rel="icon" type="image/png" href="./images/favicon.png" />
     <title>Fresh Harvest Box</title>
   </head>
 
